--- a/Jorge/jorge.html
+++ b/Jorge/jorge.html
@@ -4,7 +4,7 @@
     <title> Jorge </title>
 </head>
 <body>
-    FIXME: Hay que agregar el script y que funcione.
+    FIXME: Hay que agregar el script y que funcione
 
 </body>
 </html>
