--- a/Mancebo/Mancebo.html
+++ b/Mancebo/Mancebo.html
@@ -4,7 +4,7 @@
     <title> Mancebo </title>
 </head>
 <body>
-    <button onclick="mostrarMensaje()">Click me</button>
+    <button onclick="mostrarMensaje()">Presione aqui</button>
 
 </body>
 <script src="/Mancebo/Mancebo.js"></script>
